Added caption under gallery

--- a/index.html
+++ b/index.html
@@ -193,13 +193,14 @@
         <div class="w3-center w3-theme-dark">
             <h2>Galeria</h2>
         </div>
-        <div class="w3-white w3-content w3-section" style="max-width:846px">
+        <div class="w3-white w3-content w3-section" style="position:relative;max-width:646px">
             <img class="mySlides w3-animate-opacity" src="slideshow/27.jpg" style="width:100%" onclick="openGallery()">
             <img class="mySlides w3-animate-opacity" src="slideshow/49.jpg" style="width:100%" onclick="openGallery()">
             <img class="mySlides w3-animate-opacity" src="slideshow/50.jpg" style="width:100%" onclick="openGallery()">
             <img class="mySlides w3-animate-opacity" src="slideshow/53.jpg" style="width:100%" onclick="openGallery()">
             <img class="mySlides w3-animate-opacity" src="slideshow/74.jpg" style="width:100%" onclick="openGallery()">
         </div>
+        <p class="w3-center" onclick="openGallery()">Kliknij by otworzyć pełną galerię</p>
     </div>
 
     <div id="contact" class="w3-container" style="max-width:900px;margin:auto;padding-top:30px;">
